// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/pr ensurePr should add assignees and reviewers to new PR 1`] = `
Array [
  Array [
    undefined,
    Array [
      "foo",
      "bar",
    ],
  ],
]
`;

exports[`workers/pr ensurePr should add assignees and reviewers to new PR 2`] = `
Array [
  Array [
    undefined,
    Array [
      "baz",
      "boo",
    ],
  ],
]
`;

exports[`workers/pr ensurePr should add note about Pin 1`] = `
Array [
  "renovate/dummy-1.x",
  "Update dependency dummy to v1.1.0",
  "This PR contains the following updates:

| Package | Update | New value | References |
|--|--|--|--|
| \`dummy\` |  undefined | 1.1.0 |[source](https://github.com/renovateapp/dummy) |

:pushpin: **Important**: Renovate will wait until you have merged this Pin PR before creating any *upgrade* PRs for the affected packages. Add the preset \`:preserveSemverRanges\` your config if you instead don't wish to pin dependencies.

---

### Release Notes

<details>
<summary>renovateapp/dummy</summary>

### [\`v1.1.0\`](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

[Compare Source](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

</details>

---

### Renovate configuration

:date: **Schedule**: PR created on schedule \\"before 5am\\" in timezone some timezone

:vertical_traffic_light: **Automerge**: Disabled by config. Please merge this manually once you are satisfied.

:recycle: **Rebasing**: Renovate will regenerate this PR any time it develops a merge conflict.

:no_bell: **Ignore**: Close this PR and you won't be reminded about this update again.",
  Array [],
  false,
  false,
]
`;

exports[`workers/pr ensurePr should create PR if success 1`] = `
Array [
  "renovate/dummy-1.x",
  "Update dependency dummy to v1.1.0",
  "This PR contains the following updates:

| Package | Update | New value | References |
|--|--|--|--|
| \`dummy\` |  undefined | 1.1.0 |[source](https://github.com/renovateapp/dummy) |

---

### Release Notes

<details>
<summary>renovateapp/dummy</summary>

### [\`v1.1.0\`](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

[Compare Source](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

</details>

---

### Renovate configuration

:date: **Schedule**: PR created on schedule \\"before 5am\\" (UTC)

:vertical_traffic_light: **Automerge**: Enabled.

:recycle: **Rebasing**: Renovate will regenerate this PR any time it develops a merge conflict.

:no_bell: **Ignore**: Close this PR and you won't be reminded about this update again.",
  Array [],
  false,
  false,
]
`;

exports[`workers/pr ensurePr should create privateRepo PR if success 1`] = `
Array [
  "renovate/dummy-1.x",
  "Update dependency dummy to v1.1.0",
  "This PR contains the following updates:

| Package | Update | New value | References |
|--|--|--|--|
| \`dummy\` |  undefined | 1.1.0 |[source](https://github.com/renovateapp/dummy) |

---

### Release Notes

<details>
<summary>renovateapp/dummy</summary>

### [\`v1.1.0\`](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

[Compare Source](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

</details>

---

### Renovate configuration

:date: **Schedule**: No schedule defined.

:vertical_traffic_light: **Automerge**: Disabled by config. Please merge this manually once you are satisfied.

:recycle: **Rebasing**: Renovate will regenerate this PR any time it develops a merge conflict.

:no_bell: **Ignore**: Close this PR and you won't be reminded about this update again.",
  Array [],
  false,
  false,
]
`;

exports[`workers/pr ensurePr should return modified existing PR 1`] = `
Object {
  "body": "This PR contains the following updates:

| Package | Update | New value | References |
|--|--|--|--|
| \`dummy\` |  undefined | 1.1.0 |[source](https://github.com/renovateapp/dummy) |

---

### Release Notes

<details>
<summary>renovateapp/dummy</summary>

### [\`v1.1.0\`](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

[Compare Source](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

</details>

---

### Renovate configuration

:date: **Schedule**: PR created on schedule \\"before 5am\\" (UTC)

:vertical_traffic_light: **Automerge**: Enabled.

:recycle: **Rebasing**: Renovate will regenerate this PR any time it develops a merge conflict.

:no_bell: **Ignore**: Close this PR and you won't be reminded about this update again.",
  "canRebase": true,
  "displayNumber": "Existing PR",
  "title": "Update dependency dummy to v1.1.0",
}
`;

exports[`workers/pr ensurePr should return modified existing PR title 1`] = `
Object {
  "body": "This PR contains the following updates:

| Package | Update | New value | References |
|--|--|--|--|
| \`dummy\` |  undefined | 1.1.0 |[source](https://github.com/renovateapp/dummy) |

---

### Release Notes

<details>
<summary>renovateapp/dummy</summary>

### [\`v1.1.0\`](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

[Compare Source](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

</details>

---

### Renovate configuration

:date: **Schedule**: PR created on schedule \\"before 5am\\" (UTC)

:vertical_traffic_light: **Automerge**: Enabled.

:recycle: **Rebasing**: Renovate will regenerate this PR any time it develops a merge conflict.

:no_bell: **Ignore**: Close this PR and you won't be reminded about this update again.",
  "canRebase": true,
  "displayNumber": "Existing PR",
  "title": "wrong",
}
`;

exports[`workers/pr ensurePr should return unmodified existing PR 1`] = `Array []`;
